fix visible

--- a/public/scss/account-page/__dashboard.scss
+++ b/public/scss/account-page/__dashboard.scss
@@ -198,6 +198,10 @@
         min-height: 100%;
     }
 
+    .content-container {
+        overflow: unset;
+    }
+
     .sidebar {
         display: none;
         width: 0;
