--- a/public/scss/account-page/account-page.css
+++ b/public/scss/account-page/account-page.css
@@ -989,6 +989,9 @@
     align-items: stretch;
     min-height: 100%;
   }
+  .content-container {
+    overflow: unset;
+  }
   .sidebar {
     display: none;
     width: 0;
