--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -2738,6 +2738,9 @@ img {
     align-items: stretch;
     min-height: 100%;
   }
+  .content-container {
+    overflow: unset;
+  }
   .sidebar {
     display: none;
     width: 0;
